--- a/application.yaml
+++ b/application.yaml
@@ -1,3 +1,4 @@
+
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
@@ -7,7 +8,7 @@ spec:
   project: default
 
   source:
-    repoURL: https://gitlab.com/nanuchi/argocd-app-config.git
+    repoURL: https://github.com/chandradc/myargocd.git
     targetRevision: HEAD
     path: dev
   destination: 
